<resources>
    <string name="app_name">OCCParking</string>

    <!-- parking lot format strings -->
    <string name="parking_adams_fmt">Adams Lot: %1$.02f%%</string>
    <string name="parking_a_fmt">Lot A: %1$.02f%%</string>
    <string name="parking_b_fmt">Lot B: %1$.02f%%</string>
    <string name="parking_c_fmt">Lot C: %1$.02f%%</string>
    <string name="parking_d_fmt">Lot D: %1$.02f%%</string>
    <string name="parking_e_fmt">Lot E: %1$.02f%%</string>
    <string name="parking_g_fmt">Lot G: %1$.02f%%</string>

    <string name="capacity_fmt">Capacity: %1$d</string>
    <string name="occupied_fmt">Occupied: %1$d</string>
    <string name="occupied_txt">Occupied: </string>
    <string name="free_fmt">Free: %1$d</string>
    <string name="free_txt">Free: </string>
    <string name="types_txt">Types: </string>
    <string name="title_activity_maps">Map</string>

    <string name="lot_stats">Lot %1$s Statistics</string>
    <string name="avg_occupied_fmt">Occupied (average): %1$.02f</string>
    <string name="avg_free_fmt">Free (average): %1$.02f</string>
    <string name="avg_filled_fmt">Percentage Filled (average): %1$.02f%%</string>
    <string name="stats_credits">Application by: \nFreddy Juarez, Justin Kloppenburg, Austin Kim</string>

    <string name="find_space_text">Find Space</string>

    <!-- parking lot names -->
    <string name="lot_adams">Adams Lot</string>
    <string name="lot_a">Lot A</string>
    <string name="lot_b">Lot B</string>
    <string name="lot_c">Lot C</string>
    <string name="lot_d">Lot D</string>
    <string name="lot_e">Lot E</string>
    <string name="lot_g">Lot G</string>

    <string name="open_space">Open Space</string>

    <string name="statistics">Statistics</string>

    <string name="view_all">View all</string>

    <!-- parking lot types -->
    <string name="adams_types">Standard</string>
    <string name="lot_a_types">Standard, Coin, 20 mins, Staff, Handicap</string>
    <string name="lot_b_types">Standard, Staff, Handicap, Ev</string>
    <string name="lot_c_types">Standard, Coin</string>
    <string name="lot_d_type">Standard</string>
    <string name="lot_e_types">Standard</string>
    <string name="lot_g_types">Standard</string>

    <!-- spinner name values -->
    <string-array name="space_type">
        <item>Standard</item>
        <item>Coin</item>
        <item>20 Minute</item>
        <item>Handicap</item>
        <item>Staff</item>
    </string-array>

</resources>
