<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_lot_g_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.dkim127.occparking.LotGDetails"
    android:orientation="vertical">

    <fragment
        android:layout_width="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/lotGMapFragment"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <!--
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/lot_g"
            android:id="@+id/lotGImageView"
            android:adjustViewBounds="true"/>
    -->
    <TextView
        android:text="@string/parking_g_fmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lotGTextView"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:text="@string/free_fmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lotGFreeTextView"/>

    <TextView
        android:text="@string/occupied_fmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lotGOccupiedTextView"/>

    <TextView
        android:text="@string/capacity_fmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lotGCapacityTextView"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="findSpace"
        android:text="@string/find_space_text" />


</LinearLayout>

