<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lot_c_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.dkim127.occparking.LotCDetailsActivity"
    android:orientation="vertical">

    <fragment
        android:layout_width="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/lotCMapFragment"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
<!--
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/lot_c"
        android:id="@+id/imageView3"
        android:layout_weight="1" />
-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:text="@string/parking_c_fmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lotCDetailTextView"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/free_fmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lotCFreeTextView"/>

        <TextView
            android:text="@string/occupied_fmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lotCOccupiedTextView"/>

        <TextView
            android:text="@string/capacity_fmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lotCCapacityTextView"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="findSpace"
            android:text="@string/find_space_text" />

    </LinearLayout>
</LinearLayout>
