<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.dkim127.occparking.MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/mapmask"
            android:id="@+id/mapMaskImageView"
            android:adjustViewBounds="true"
            android:visibility="invisible"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/map"
            android:id="@+id/mapImageView"
            android:adjustViewBounds="true"/>
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:text="@string/parking_adams_fmt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lotAdamsTextView"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:textSize="14sp"
            android:gravity="right"/>

        <TextView
            android:text="@string/parking_g_fmt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lotGTextView"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:textSize="14sp"
            android:gravity="right"/>

        <TextView
            android:text="@string/parking_a_fmt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lotATextView"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:textSize="14sp"
            android:gravity="right"/>

        <TextView
            android:text="@string/parking_b_fmt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lotBTextView"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_columnWeight="1"
            android:textSize="14sp"
            android:gravity="right"/>

        <TextView
            android:text="@string/parking_c_fmt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lotCTextView"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:textSize="14sp"
            android:gravity="right"/>

        <TextView
            android:text="@string/parking_d_fmt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lotDTextView"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:textSize="14sp"
            android:gravity="right"/>

        <TextView
            android:text="@string/parking_e_fmt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lotETextView"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:textSize="14sp"
            android:gravity="right"/>
    </GridLayout>
</LinearLayout>
