<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="openDetails">

    <ImageView
        app:srcCompat="@drawable/adams"
        android:id="@+id/parkingLotItemImageView"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        android:adjustViewBounds="false"
        android:layout_height="80dp"
        android:layout_width="165dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/parkingLotItemNameTextView"
            android:textSize="24sp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:text="@string/types_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/parkingLotItemtypesTextView"
                android:layout_weight="1"/>

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lotTypesTextView"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:text="@string/free_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/parkingLotItemFreeTextView"
                />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lotItemFreeValueTextView"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/occupied_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/parkingLotItemFillTextView"
                android:layout_weight="0.5"/>

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lotItemFillValueTextView"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>